# 3-surgeons

./: .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CODEX.md  GEMINI.md  LICENSE  README.md  RELEASE-NOTES.md  gemini-extension.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml.example
.cursor-plugin/: plugin.json
agents/: surgeon-reviewer.md
commands/: challenge.md  cross-exam.md  docs-init.md  gains-gate.md  probe.md  sentinel.md  surgeons.md
config/: 3surgeons.example.yaml  gemini-extension.json
docs/: CONTEXTDNA-IDE-UPGRADE.md  command-parity-gap-analysis.md  host-setup.md
hooks/: gate-reminder  hooks.json  session-start
scripts/: build_manifests.py  generate-manifests.py
tests/: conftest.py  test_ab_lifecycle.py  test_ab_testing.py  test_adapters.py  test_anthropic_cardiologist.py  test_audit.py  test_audit_commands.py  test_background_poller.py  test_backward_compat.py  test_capability_hardening.py  test_capability_lifecycle.py  test_capability_messages.py  test_capability_registry.py  test_cardio.py  test_cardiologist_deepseek.py  test_cardiologist_fallback.py  test_chain_consultation.py  test_chain_integration.py  test_chain_telemetry.py  test_chains.py  test_chooser.py  test_cli.py  test_cli_chain.py  test_cli_commands.py  test_cli_live.py  test_confab_auto_retry.py  test_confab_expanded_patterns.py  test_confab_visibility.py  test_confabulation_detector.py  test_config.py  test_config_chains.py  test_config_resolver.py  test_consensus_json.py  test_context_builder.py  test_counter_probe.py  test_cross_exam.py  test_default_fallback.py  test_diagnostics.py  (+57 more)
(+128 files in other folders)
