[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "three-surgeons"
version = "0.1.0"
description = "Multi-model consensus system for Claude Code"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
redis = ["redis>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
3s = "three_surgeons.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["three_surgeons*"]
