[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "three-surgeons"
version = "1.0.0"
description = "Multi-model consensus system for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
http = ["starlette>=0.40", "uvicorn>=0.30", "httptools>=0.6"]
ide = ["websockets>=16.0"]
redis = ["redis>=5.0"]
contextdna = ["redis>=5.0", "requests>=2.28"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
all = ["three-surgeons[mcp,http,redis,contextdna]"]

[project.scripts]
3s = "three_surgeons.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real LLM endpoints (deselect with -m 'not integration')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["three_surgeons*"]
